--- a/index.html
+++ b/index.html
@@ -4,12 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalkulator Persegi</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Kalkulator Hitung Persegi</h1>
+        <h1>KATIK <span>Kalkulator Matematik</span></h1>
     </header>
+    <div class="container">
+        <div class="container-row">
+            <input name="display" class="input" type="number">
+        </div>
+        <div class="container-row">
+            <button class="btn">AC</button>
+            <button class="btn">C</button>
+            <button class="btn">*</button>
+    
+        </div>
+        <div class="container-row">
+            <button class="btn">7</button>
+            <button class="btn">8</button>
+            <button class="btn">9</button>
+            <button class="btn">/</button>
+        </div>
+        <div class="container-row">
+            <button class="btn">4</button>
+            <button class="btn">5</button>
+            <button class="btn">6</button>
+            <button class="btn">+</button>
+        </div>
+        <div class="container-row">
+            <button class="btn">1</button>
+            <button class="btn">2</button>
+            <button class="btn">3</button>
+            <button class="btn">-</button>
+        </div>
+        <div class="container-row">
+            <button class="btn">+/-</button>
+            <button class="btn">0</button>
+            <button class="btn">.</button>
+            <button class="btn">=</button>
+        </div>
+
+    </div>
     <section class="luasInputSection">
         <label for="inputField">Sisi Persegi</label>
         <input type="number" id="inputField" placeholder="Masukan sisi">
